# anywhere-sdr

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  .typos.toml  Cargo.toml  LICENSE  README.md  codecompanion-workspace.json  rust-analyzer.toml
.cargo/: config.toml
.github/workflows/: ci.yaml  release.yaml
apps/gpssim/: Cargo.toml
apps/gpssim/src/: cli.rs  error.rs  main.rs  utils.rs
crates/constants/: Cargo.toml
crates/constants/src/: constants.rs
crates/geometry/: Cargo.toml
crates/geometry/src/: coordinates.rs  error.rs  geometry.rs  tests.rs  traits.rs  transformation.rs
crates/gps/: Cargo.toml
crates/gps/resources/: gpssim.c
crates/gps/src/: channel.rs  constants.rs  datetime.rs  delay.rs  eph.rs  ephemeris.rs  error.rs  generator.rs  geometry.rs  gps.rs  io.rs  ionoutc.rs  params.rs  process.rs  propagation.rs  read_nmea_gga.rs  read_rinex.rs  read_user_motion.rs  table.rs  utils.rs
crates/gps/src/delay/: ionospheric.rs
crates/gps/src/generator/: builder.rs  signal_generator.rs  utils.rs
crates/gps/tests/: prepare.rs  test-generator.rs  test-process.rs
crates/libhackrf/: Cargo.toml
crates/libhackrf/src/: constants.rs  enums.rs  error.rs  hackrf.rs  lib.rs  prelude.rs  tests.rs
crates/parsing/: Cargo.toml
crates/parsing/src/: error.rs  nmea.rs  parsing.rs  user_motion.rs
crates/rinex/: Cargo.toml
crates/rinex/src/: ephemeris.rs  error.rs  rinex.pest  rinex.rs  rule.rs  utc.rs  utils.rs
crates/rinex/src/ephemeris/: orbit.rs
crates/rinex/tests/: rinex.rs
examples/: gpssim.c
resources/: gpssim.c
src/: cli.rs  constants.rs  datetime.rs  eph.rs  getopt.rs  ionoutc.rs  main.rs  process.rs  read_nmea_gga.rs  read_rinex.rs  read_user_motion.rs  table.rs  utils.rs
src/cli/: sizer.rs
