[package]
name = "gps"
version = "0.1.0"
edition = "2024"

[dependencies]

# internal dependencies

# external dependencies
libc = { version = "0.2" }
anyhow = { version = "*" }
clap = { version = "4", features = ["derive", "unicode", "wrap_help", "env"] }
log = { version = "0.4" }
rayon = { version = "1" }
thiserror = { version = "2" }
tracing = { version = "0.1" }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3" }


[workspace.lints.clippy]
blocks_in_conditions = "allow"
dbg_macro = "deny"
struct-field-names = "allow"
items-after-statements = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
no-effect-underscore-binding = "allow"
pedantic = { level = "deny", priority = -1 }
return_self_not_must_use = "allow"
struct-excessive-bools = "allow"
needless_pass_by_value = "allow"
style = { level = "deny", priority = 1 }
todo = "deny"

[workspace.lints.rust]
