[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["Lao Lilin <lll9p.china@gmail.com>"]
description = """
Software-Defined GNNS Signal Simulator.
"""
documentation = "https://github.com/lll9p/anywhere-sdr"
homepage = "https://github.com/lll9p/anywhere-sdr"
repository = "https://github.com/lll9p/anywhere-sdr"
keywords = ["sdr", "simulation", "gnns", "gps"]
categories = ["sdr", "simulation"]
license-file = "LICENSE"
exclude = ["/.github/"]

[workspace]
resolver = "2"
members = ["crates/*", "apps/gpssim"]
exclude = ["target", "dist"]


[workspace.dependencies]
# internal dependencies
constants = { path = "./crates/constants" }
geometry = { path = "./crates/geometry" }
gps = { path = "./crates/gps" }
rinex = { path = "./crates/rinex" }
parsing = { path = "./crates/parsing" }

# external dependencies
clap = { version = "4", features = ["derive", "unicode", "wrap_help", "env"] }
csv = { version = "1" }
jiff = { version = "0.2" }
log = { version = "0.4" }
pest = { version = "2" }
pest_derive = { version = "2" }
rayon = { version = "1" }
test-case = { version = "3" }
thiserror = { version = "2" }
tracing = { version = "0.1" }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3" }

[workspace.lints.clippy]
blocks_in_conditions = "allow"
dbg_macro = "deny"
items-after-statements = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
no-effect-underscore-binding = "allow"
pedantic = { level = "deny", priority = -1 }
return_self_not_must_use = "allow"
struct-excessive-bools = "allow"
needless_pass_by_value = "allow"
style = { level = "deny", priority = 1 }
# todo = "deny"
# temporary_allowed
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
many_single_char_names = "allow"
cast_possible_wrap = "allow"
struct_field_names = "allow"
wildcard_imports = "allow"
similar_names = "allow"
used_underscore_binding = "allow"
todo = "deny"

[workspace.lints.rust]

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1
