[package]
name = "geometry"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Geodetic coordinate transformations and navigation calculations for GPS/GNSS applications"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["gps", "gnss", "geodesy", "coordinates", "navigation"]
categories = ["science", "algorithms"]
license.workspace = true
readme.workspace = true

[lib]
path = "src/geometry.rs"
doctest = true

[dependencies]
# Internal dependencies
constants.workspace = true

# Error handling
thiserror.workspace = true


[dev-dependencies]
test-case.workspace = true

[lints]
workspace = true
