[package]
name = "gps"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license-file.workspace = true
edition.workspace = true

[lib]
path = "src/gps.rs"

[dependencies]
# internal dependencies
geometry.workspace = true
constants.workspace = true
parsing.workspace = true
rinex.workspace = true

# external dependencies
clap.workspace = true
csv.workspace = true
jiff.workspace = true
log.workspace = true
rayon.workspace = true
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true
test-case.workspace = true

[lints]
workspace = true
