[package]
name = "gps"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "GPS L1 C/A signal generator and simulator for software-defined radio applications"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["gps", "gnss", "sdr", "simulation", "signal-processing"]
categories = ["science", "simulation", "hardware-support"]
license.workspace = true
readme.workspace = true

[lib]
path = "src/gps.rs"
doctest = true

[dependencies]
# Internal dependencies
geometry.workspace = true
constants.workspace = true
parsing.workspace = true
rinex.workspace = true

# Error handling
thiserror.workspace = true

# Data processing
jiff.workspace = true


[dev-dependencies]
test-case.workspace = true

[lints]
workspace = true
