[package]
name = "libhackrf"
version.workspace = true
authors.workspace = true
description = "A Rust library for interfacing with HackRF software-defined radio devices (modified from libhackrf-rs)"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license-file.workspace = true
edition.workspace = true

# This library is a modified version of https://github.com/fl1ckje/libhackrf-rs
# with the main change being the replacement of rusb with nusb


[dependencies]
# internal dependencies

# external dependencies
nusb.workspace = true
futures-lite.workspace = true
thiserror.workspace = true

[dev-dependencies]
test-case.workspace = true

[lints]
workspace = true
