[package]
name = "parsing"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Parsers for GPS/GNSS data formats including NMEA GGA streams and user motion files"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["gps", "gnss", "nmea", "parser", "motion"]
categories = ["science", "parser-implementations"]
license.workspace = true
readme.workspace = true

[lib]
path = "src/parsing.rs"
doctest = true

[dependencies]
# Internal dependencies
geometry.workspace = true
constants.workspace = true

# Error handling
thiserror.workspace = true

# Data processing
csv.workspace = true


[dev-dependencies]
test-case.workspace = true

[lints]
workspace = true
