[package]
name = "rinex"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license-file.workspace = true
exclude.workspace = true
resolver = "2"

[lib]
path = "src/rinex.rs"

[dependencies]
jiff.workspace = true
pest.workspace = true
pest_derive.workspace = true
thiserror.workspace = true

[dev-dependencies]
test-case.workspace = true

[lints]
workspace = true
